Fixed issue with over lapping sections on mobile and refactored queries into args variable

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,3 @@
-section {
-    height: 100vh;
-}
-
 footer {
     height: 400px;
 }
